  BBCSDL uses this suffix to explicitly specify a FP variable, as it uses
  suffixless variables as "variants" which can change their nature.
- BASIC: Fixed a bug where RENUMBER on a program with a REM would make the
  program un-RUN-able.
- BASIC: MOD and DIV with floating-point arguments are now supported.
  (They are, of course, converted to ints before processing.)

* 1.23.5 - 06 April 2025
- General: Implement code fixes based on GCC 14.2's -fanalyze feature.
- System: Fix an intermittent hang on the version check due to network
  conditions, and a crash if unexpected data is received.
- Graphics: Can now zoom the window, use command line -zoom <factor> or config
  file entry zoom <factor> in the range 1-4.
- MOS: *LOAD and *SAVE display a warning if Hex64 mode is not enabled on 64-bit
  platforms.
- BASIC: Fix behaviour of RESTORE LOCAL with implied LOCAL of variables passed
  into a function or procedure.
- BASIC: Incore file name on first line of program MUST be after a REM.
- BASIC: If Strict mode is enabled, STR$~ now reports an error if Hex64 is not
  enabled and the value cannot be accurately displayed.
- BASIC: Implemented var1^=var2, array()^=var and array1()^=array2().
- BASIC: Fix bug where mixed case keywords were recognised when lower case
  keywords was not enabled.

* 1.23.4 - 18 October 2024
- General: Fix potential buffer overflow when detokenising code.
- General: Fix use of potentially uninitialised memory in SDL buffer.
- General: Fix crash and add warning if version check retrieval fails.
- Build: Add support for strlcpy() and friends for more platforms that
  include them, thanks to Brad Smith for this!
- Graphics: Work around a SDL1.2-compat issue where leaving fullscreen
  mode left the mouse restricted to the window.
- BASIC: SAVE no longer affected by LISTO.
- BASIC: Allow lowercase keywords if '-lck' command line option is used or
  'lowercase' config file option is present, or at runtime via the SYS
  "Brandy_AllowLowercase" call.